fix for safari card-slider stretch

--- a/homepage/homepage.less
+++ b/homepage/homepage.less
@@ -103,8 +103,10 @@
 	    top: 50%;
 	    .translateY(-50%);
 	}
+	.slick-slide {
+		.align-items(stretch);
+	}
 	.cards .card {
-		height:100%;
 		border:none;
 		.card-header {
 			background-color:@pure-black;
